--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
+    "@emotion/is-prop-valid": "1.4.0",
     "@hcaptcha/react-hcaptcha": "^1.14.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -32,7 +32,7 @@
     "@radix-ui/react-select": "2.1.4",
     "@radix-ui/react-separator": "1.1.1",
     "@radix-ui/react-slider": "1.2.2",
-    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
     "@radix-ui/react-toast": "1.2.4",
@@ -41,33 +41,33 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@vercel/analytics": "latest",
+    "@vercel/analytics": "1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
-    "immer": "latest",
+    "framer-motion": "12.23.24",
+    "immer": "10.2.0",
     "input-otp": "1.4.1",
     "leaflet": "1.9.4",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-themes": "latest",
+    "next-themes": "0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "3.4.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "use-sync-external-store": "latest",
+    "use-sync-external-store": "1.6.0",
     "vaul": "^0.9.9",
     "zod": "3.25.76",
-    "zustand": "latest"
+    "zustand": "5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
